# AInvestor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ainvestor/: __init__.py  __main__.py  alerts.py  config.py  cycle_runner.py  main.py  mcp_server.py  scheduler.py
ainvestor/api/: __init__.py  routes.py
ainvestor/brokers/: __init__.py  ibkr.py
ainvestor/collectors/: __init__.py  derivatives.py  derivatives_store.py  exchange_client.py  macro.py  market.py  news.py  sentiment.py  stocks.py
ainvestor/db/: __init__.py  models.py
ainvestor/dex/: __init__.py  connector.py
ainvestor/engine/: __init__.py  ai_agent.py  executor.py  exit_rules.py  instrument_context.py  learning.py  proposal_order.py  quant.py  risk.py  testnet.py
ainvestor/models/: __init__.py  schemas.py
ainvestor/portfolio/: __init__.py  manager.py  perp_simulator.py  perp_sizing.py  profiles.py  stock_simulator.py  unified.py
ainvestor/services/: charts.py  fx.py  market_context_cache.py  market_hours.py  market_prices.py  paper_reset.py  (+1 more)
config/: risk.yaml
scripts/: audit_ai_model.py  audit_db.py  audit_db.sh  backtest.py  inspect_cursor_models.py  remove_aggressive_portfolio.py  remove_conservative_portfolio.py  reset_paper_portfolios.py  run_cycle.py  start.bat
tests/: test_ai_parser.py  test_derivatives_fallback.py  test_dex.py  test_dual_portfolio.py  test_exit_rules.py  test_extreme_allin.py  test_paper_simulator.py  test_perp_sizing.py  test_perp_snapshot.py  test_proposal_order.py  test_quant.py  test_risk.py
(+17 files in other folders)
