[project]
name = "ainvestor"
version = "0.1.0"
description = "Crypto trading bot with AI-assisted decisions and paper trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "ccxt>=4.4.0",
    "apscheduler>=3.10.4",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "cursor-sdk>=0.1.0",
    "mcp>=1.1.0",
    "yfinance>=0.2.50",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
ibkr = [
    "ib_insync>=0.9.86",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ainvestor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
